--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             const submitPassword = document.getElementById('submitPassword');
 
             submitPassword.addEventListener('click', function () {
-                if (passwordInput.value.toLowerCase() === 'sevinch') {
+                if (passwordInput.value.toLowerCase() === 'batman') {
                     passwordModal.style.opacity = '0';
                     setTimeout(() => {
                         passwordModal.style.display = 'none';
@@ -600,5 +600,6 @@
         });
     </script>
 </body>
+
 
 </html>
