--- a/index.html
+++ b/index.html
@@ -468,27 +468,27 @@
                 <h2>Senga atab gullar</h2>
                 <div class="gallery">
                     <div class="gallery-item">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/1eaad721-3375-4d97-a5fa-cbf8a87d60b8.png"
+                        <img src="https://pin.it/4gEXvQnRZ"
                             alt="Bouquet of delicate pink roses with soft green leaves">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/73632299-5dde-4ded-805a-88a7dcb4b5e4.png"
+                        <img src="https://pin.it/4DKGHCD2i"
                             alt="Beautiful pink tulips in a glass vase with morning dew">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/e9890063-b481-46f6-97a1-9fc753211e19.png"
+                        <img src="https://pin.it/ntl71lVD6"
                             alt="Fluffy pink peony flowers with lush foliage">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/4bc3dffd-4971-4223-b7e4-3699d2b97bbe.png"
+                        <img src="https://pin.it/4hWlADhRy"
                             alt="Branch of pink cherry blossoms against a blue sky">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/d0daff3c-1751-492b-9b74-de28ac48d384.png"
+                        <img src="https://pin.it/2LHyNoSam"
                             alt="Cluster of light pink carnations with delicate petals">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/51f3ca74-2471-403f-bb99-751536acd7d9.png"
+                        <img src="https://pin.it/4CK0IOKou"
                             alt="Vibrant pink azalea flowers covering a garden bush">
                     </div>
                 </div>
@@ -603,3 +603,4 @@
 
 
 </html>
+
