--- a/index.html
+++ b/index.html
@@ -467,31 +467,30 @@
             <div class="tab-content" id="gallery">
                 <h2>Senga atab gullar</h2>
                 <div class="gallery">
-                    <div class="gallery-item">
-                        <img src="https://pin.it/4gEXvQnRZ"
-                            alt="Bouquet of delicate pink roses with soft green leaves">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://pin.it/4DKGHCD2i"
-                            alt="Beautiful pink tulips in a glass vase with morning dew">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://pin.it/ntl71lVD6"
-                            alt="Fluffy pink peony flowers with lush foliage">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://pin.it/4hWlADhRy"
-                            alt="Branch of pink cherry blossoms against a blue sky">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://pin.it/2LHyNoSam"
-                            alt="Cluster of light pink carnations with delicate petals">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://pin.it/4CK0IOKou"
-                            alt="Vibrant pink azalea flowers covering a garden bush">
-                    </div>
-                </div>
+    <div class="gallery-item">
+        <img src="https://i.ibb.co/M55KFh64/Batcat.jpg" alt="">
+    </div>
+
+    <div class="gallery-item">
+        <img src="https://i.ibb.co/YF0KMxn0/image.jpg" alt="">
+    </div>
+
+    <div class="gallery-item">
+        <img src="https://i.ibb.co/XZkTzGH3/1.jpg" alt="">
+    </div>
+
+    <div class="gallery-item">
+        <img src="https://i.ibb.co/YBPRg2jD/3.jpg" alt="">
+    </div>
+
+    <div class="gallery-item">
+        <img src="https://i.ibb.co/sv5wQnQf/4.jpg" alt="">
+    </div>
+
+    <div class="gallery-item">
+        <img src="https://i.ibb.co/GfsmNTgR/eliteshel.jpg" alt="">
+    </div>
+</div>
             </div>
         </div>
     </div>
@@ -603,4 +602,5 @@
 
 
 </html>
+
 
