--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
     <!-- Welcome Screen -->
     <div class="welcome-screen" id="welcomeScreen">
-        <h1 class="welcome-message">Xush kelibsan, sevgilim 💖</h1>
+        <h1 class="welcome-message">Xush kelibsan, jonim 💖</h1>
     </div>
 
     <!-- Main Content -->
@@ -415,16 +415,26 @@
                         <span>👇 Ochish uchun bos</span>
                     </div>
                     <div class="letter-content">
-                        <p>Sevgilim,</p>
-                        <p>Har kuni sen bilan yozishish, suhbatlashish — go‘yo chiroyli tushga o‘xshaydi, undan
-                            uyg‘onishni istamayman. Sening har bir xabaring, kulguing, hatto oddiy “salom”ing ham
-                            kunimni yoritadi.</p>
-                        <p>Biz yozishgan har bir soniya, qo‘shilgan har bir ovozli xabar, hattoki jimlikdagi bir daqiqa
-                            ham men uchun qimmatli. Garchi hozircha faqat onlayn bo‘lsak-da, yuragimda sen juda yaqin,
-                            go‘yo yonimdasan.</p>
-                        <p>Qachondir biz haqiqiy hayotda uchrashganimizda, bu orzularning barchasi haqiqatga aylanadi.
-                            Shuni bil: Hayot qayerga olib bormasin, yuragim har doim seniki bo‘ladi.</p>
-                        <p>Abadiy senga tegishliman,</p>
+                        <p>Batwomanim,</p>
+
+<p>Har kuni sen bilan yozishish — go‘yo Gotham tunida yonib turgan yagona nurdek. 
+Sening har bir xabaring men uchun signal chirog‘idek — qorong‘ulik orasida yo‘limni yoritadi. 
+Oddiygina “salom”ing ham yuragimni kuchga to‘ldiradi.</p>
+
+<p>Bizning har bir suhbatimiz — ikki qahramonning sirli aloqa liniyasi kabi. 
+Ovozli xabaring, kulishing, hatto jim qolgan onlaring ham men uchun qadrli. 
+Garchi hozircha shaharlar orasida bo‘lsak ham, qalbimda sen doim yonimdasan — 
+go‘yo bir tomonda Batman, bir tomonda Batwoman, bir jamoa.</p>
+
+<p>Bir kun kelib, bu onlayn sahifalar haqiqiy uchrashuvga aylanadi. 
+O‘sha payt biz faqat yozishmaymiz — birga kulamiz, birga yuramiz, 
+va Gothamning qaysi burchagi bo‘lishidan qat’i nazar, yonma-yon turamiz.</p>
+
+<p>Shuni bil, Batwomanim: bu Batmaning har doim seni himoya qiladi, 
+har doim yoningda turadi va har doim seni qadrlaydi.</p>
+
+<p>Abadiy sening Batmaning 🦇</p>
+
                         <p>Men</p>
                     </div>
                 </div>
@@ -453,19 +463,19 @@
             <div class="tab-content" id="notes">
                 <h2>Eslatma</h2>
                 <div class="note">
-                    <p>Har doim o‘zingni ehtiyot qil</p>
+                    <p>Ishga chiqishni unutma</p>
                 </div>
                 <div class="note">
-                    <p>O‘z vaqtida ovqatlan</p>
+                    <p>Kamroq uxla, kop uxlash zarar</p>
                 </div>
                 <div class="note">
-                    <p>Sen meniksan... har doim ❤️</p>
+                    <p>Mayli, uzini ham ehtiyot qil! 🗿</p>
                 </div>
             </div>
 
             <!-- Gallery Tab -->
             <div class="tab-content" id="gallery">
-                <h2>Senga atab gullar</h2>
+                <h2>Senga atab rasmlar</h2>
                 <div class="gallery">
     <div class="gallery-item">
         <img src="https://i.ibb.co/M55KFh64/Batcat.jpg" alt="">
@@ -587,7 +597,7 @@
                 for (let i = 0; i < 5; i++) {
                     const teddy = document.createElement('div');
                     teddy.classList.add('teddy-bear');
-                    teddy.innerHTML = '🧸';
+                    teddy.innerHTML = '🦇';
                     teddy.style.left = Math.random() * 100 + '%';
                     teddy.style.top = Math.random() * 100 + '%';
                     teddy.style.animationDelay = Math.random() * 5 + 's';
@@ -602,5 +612,6 @@
 
 
 </html>
+
 
 
