--- a/index.html
+++ b/index.html
@@ -509,8 +509,8 @@ har doim yoningda turadi va har doim seni qadrlaydi.</p>
     <div class="heart" style="top: 10%; left: 5%;">❤️</div>
     <div class="heart" style="top: 20%; right: 10%;">❤️</div>
     <div class="heart" style="bottom: 15%; left: 15%;">❤️</div>
-    <div class="teddy-bear" style="top: 30%; left: 10%;">🧸</div>
-    <div class="teddy-bear" style="bottom: 10%; right: 5%;">🧸</div>
+    <div class="teddy-bear" style="top: 30%; left: 10%;">🦇</div>
+    <div class="teddy-bear" style="bottom: 10%; right: 5%;">🦇</div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -612,6 +612,7 @@ har doim yoningda turadi va har doim seni qadrlaydi.</p>
 
 
 </html>
+
 
 
 
